--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -64,6 +64,16 @@ object {
 	outline: 1px solid gold
 }
 
+.about {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.about nav {
+    display: flex;
+    gap: 1em;
+}
 
 .about nav a {
 	margin-right: 10px;
@@ -212,6 +222,56 @@ a.active {
 	text-decoration: underline;
 }
 
+.book-list {
+    list-style: none;
+    padding: 15px 0 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+}
+
+.book-list li {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--clr1);
+    padding-block: 0.2em;
+}
+
+.book-preview {
+    text-align: center;
+    padding: 0.3em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.book-preview h4 {
+    text-transform: capitalize;
+    color: black;
+}
+
+.book-preview img {
+    max-width: 175px;
+}
+
+.book-filter {
+    background-color: var(--clr2bg);
+    padding: 0.3rem 1em;
+    margin-block: .5em;
+    
+}
+
+.book-filter form {
+    display: grid;
+    grid-template-columns: 100px 200px;
+    gap: .3em;
+}
+
+.book-filter form button {
+    margin-inline: 0
+}
 
 @media (max-width: 720px) {
 	.app-header {
