--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -9,7 +9,7 @@
 
 	--clr1bg: rgb(153, 166, 149);
 	--clr1bg-light: rgb(205, 221, 200);
-	--clr2bg: rgb(233, 206, 221);
+	--clr2bg: rgb(161, 213, 197);
 	--clr2bg-light: rgb(7, 73, 29);
 
 	--gray1: rgb(240, 240, 240);
@@ -271,6 +271,36 @@ a.active {
 
 .book-filter form button {
     margin-inline: 0
+}
+
+.book-details {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.book-details h1 {
+    color: black;
+    font-size: 2em;
+    
+}
+
+.book-details h5 {
+    color: var(--clr2);
+}
+
+.book-details img {
+    max-width: 300px;
+    display: block;
+    margin: auto;
+	margin-bottom: 20px;
+}
+
+.book-details button {
+	display: grid;
+	margin: auto;
+	border-radius: 30%;
+	margin-top: 5px;
 }
 
 @media (max-width: 720px) {
