--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -276,7 +276,7 @@ a.active {
 .book-details {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .book-details h1 {
