--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -239,6 +239,7 @@ a.active {
 	border-radius: 5%;
     background-color: var(--clr1);
     padding-block: 0.2em;
+	box-shadow: 5px 15px 15px 5px rgb(0, 0, 0, 0.4);
 }
 
 .book-list button {
@@ -273,6 +274,7 @@ a.active {
     padding: 0.3rem 1em;
     margin-block: .5em;
     border-radius: 5%;
+	box-shadow: 5px 15px 15px 5px rgb(0, 0, 0, 0.4);
 }
 
 .book-filter form {
@@ -309,6 +311,8 @@ a.active {
     display: block;
     margin: auto;
 	margin-bottom: 20px;
+	border-radius: 5%;
+	box-shadow: 5px 15px 15px 5px rgb(0, 0, 0, 0.4);
 }
 
 .book-details button {
@@ -321,6 +325,20 @@ a.active {
 .book-details button:hover {
 	background-color: var(--clr1bg);
 }
+
+.on-sale-sign {
+	position: relative;
+	right: 22%;
+	background-color: #ff0000;
+	color: white;
+	font-size: 14px;
+	font-weight: bolder;
+	padding: 4px 6px;
+	font-family: "Times New Roman", Times, serif;
+	z-index: 10;
+	box-shadow: 0px 1.5px 3px 0px black, 0px -1.5px 3px 0px black;
+	border-radius: 10px 10px 10px 10px;
+  }
 
 @media (max-width: 720px) {
 	.app-header {
