--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -373,6 +373,23 @@ h4 {
 	opacity: 100%;
 }
 
+.range-container {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Adjust the spacing between elements */
+}
+
+.range-container span {
+	font-family: monospace;
+    font-size: 0.95em; /* Adjust the size of the labels */
+    color: var(--gray3); /* Ensure it matches your design */
+}
+
+.range-container input[type="range"] {
+    flex-grow: 1; /* Makes the range input stretch to fill space */
+    margin: 0 10px; /* Adds spacing between the labels */
+}
+
 @media (max-width: 720px) {
 	.app-header {
 		color: var(--clr2bg-light);
