--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -312,6 +312,7 @@ h4 {
 	max-width: 75%;
 	display: block;
 	margin: auto;
+	margin-top: 3%;
 	margin-bottom: 20px;
 	border-radius: 5%;
 	box-shadow: 5px 15px 15px 5px rgb(0, 0, 0, 0.4);
@@ -322,6 +323,14 @@ h4 {
 	margin: auto;
 	border-radius: 30%;
 	margin-top: 5px;
+}
+
+.book-details-button-container {
+	display: flex;
+	gap: 50px;
+	justify-content: space-evenly;
+	margin-top: 4%;
+	margin-bottom: 4%;
 }
 
 .book-details button:hover {
